# challenge

./: CMakeLists.txt  main_template.cpp  runner.py  solver_main.cpp  tester.hpp  tester_main.cpp
boolean_function/: main.cpp
intervals/: main.cpp
meet_in_the_middle/: main.cpp
split_tree/: main.cpp
square_sweep/: main.cpp
timed_paths/: main.cpp
tree_brackets/: main.cpp
tree_centroid/: main.cpp
tree_requests/: main.cpp
